Relacioné a cada pelicula del home con su formulario. Falta que este ultimo recupere la información de cada campo

--- a/frontend/views/favoritas.html
+++ b/frontend/views/favoritas.html
@@ -16,6 +16,6 @@
       <h1 class="main">Listado de Películas Favoritas</h1>
       <div class="container"></div>
     </div>
-    <script type="text/javascript" src="js/favoritas.js"></script>
+    <script src="js/favoritas.js"></script>
   </body>
 </html>
