--- a/frontend/views/formulario.html
+++ b/frontend/views/formulario.html
@@ -9,10 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Dosis:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
-    <form class="card formulario">
+    <form class="card formulario" id="formulario">
         <input type="hidden" name="id">
         <div>        
             <label for="title">Título </label>
