--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -14,8 +14,13 @@
     
     <div id="root">
       <h1 class="main">Listado de Películas</h1>
-      <div class="container"></div>
+     
+        <div class="container"> </div>
+      
+
     </div>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
+ 
   </body>
 </html>
