--- a/src/views/formulario.ejs
+++ b/src/views/formulario.ejs
@@ -9,23 +9,29 @@
       href="https://fonts.googleapis.com/css?family=Dosis:400,700"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/styleFront.css" />
 </head>
 <body>
-    <form class="card formulario" id="formulario">
+
+    <h1 class="moviesAddTitulo"></h1>
+    <article></article>
+    <form class="card formulario form" id="formulario" method="POST" action="/">
         <input type="hidden" name="id">
         <div>        
             <label for="title">Título </label>
             <p><input type="text" name="title" id="title" required></p>
         </div>
+        
         <div>
             <label for="rating">Calificación </label>
             <p><input type="number" name="rating" id="rating" required></p>
         </div>
+        
         <div>
         <label for="awards">Premios </label>
         <p><input type="number" name="awards" id="awards" required></p>
         </div>
+        
         <div>
             <label for="release_date">Fecha de creación </label>
             <p><input type="date" name="release_date" id="release_date" required></p>
@@ -34,14 +40,20 @@
             <label for="length">Duración </label>
             <p><input type="number" name="length" id="length" required></p>
         </div>
+
+        <ul class="errores"></ul>
         
         <br>
         <div class="action">
-            <button class="botonAgregar" >Editar</button>
+            <button class="botonAgregar">Editar</button>
             <button class="botonAgregar">Crear</button>
             <button class="botonBorrar">Eliminar</button>
         </div>
     </form>
-    <script src="js/formulario.js"></script>
+    <script src="/js/formulario.js"></script>
+    <script src="/js/moviesAddValidation.js"></script>
+    
+        
+    </script>
 </body>
 </html>
