--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,6 +14,8 @@
     
     <div id="root">
       <h1 class="main">Listado de Películas</h1>
+
+      <a href="/form">Agregar pelicula</a>
      
         <div class="container"> </div>
       
