--- a/src/views/formulario.ejs
+++ b/src/views/formulario.ejs
@@ -45,13 +45,14 @@
         
         <br>
         <div class="action">
-            <button class="botonAgregar">Editar</button>
-            <button class="botonAgregar">Crear</button>
+            <button class="botonAgregar" id="editButton">Editar</button>
+            <button class="botonAgregar" id="createButton">Crear</button>
             <button class="botonBorrar">Eliminar</button>
         </div>
     </form>
-    <script src="/js/formulario.js"></script>
     <script src="/js/moviesAddValidation.js"></script>
+    <script src="/js/formulario.js"></script>
+
     
         
     </script>
