--- a/src/views/formulario.ejs
+++ b/src/views/formulario.ejs
@@ -14,31 +14,54 @@
 <body>
 
     <h1 class="moviesAddTitulo"></h1>
-    <article></article>
+    <article>
+        <a href="/"> Volver al home </a>
+    </article>
     <form class="card formulario form" id="formulario" method="POST" action="/">
+       
         <input type="hidden" name="id">
         <div>        
             <label for="title">Título </label>
-            <p><input type="text" name="title" id="title" required></p>
+            <% if (typeof pelicula !== 'undefined') { %>
+                <p><input type="text" name="title" id="title" required value="<%= pelicula.data.title %>"></p>
+            <% } else{ %> 
+            <p><input type="text" name="title" id="title" required ></p>
+            <% } %> 
         </div>
         
         <div>
             <label for="rating">Calificación </label>
+            <% if (typeof pelicula !== 'undefined') { %>
+            <p><input type="number" name="rating" id="rating" required value="<%= pelicula.data.rating %>"></p>
+            <% } else { %>    
             <p><input type="number" name="rating" id="rating" required></p>
+            <% } %> 
         </div>
         
         <div>
         <label for="awards">Premios </label>
+        <% if (typeof pelicula !== 'undefined') { %>
+        <p><input type="number" name="awards" id="awards" required value="<%= pelicula.data.awards %>"></p>
+        <% } else { %> 
         <p><input type="number" name="awards" id="awards" required></p>
+        <% } %> 
         </div>
         
         <div>
             <label for="release_date">Fecha de creación </label>
+            <% if (typeof pelicula !== 'undefined') { %>
+            <p><input type="date" name="release_date" id="release_date" required value="<%= pelicula.data.release_date.slice(0,10) %>"></p>
+            <% } else { %> 
             <p><input type="date" name="release_date" id="release_date" required></p>
+            <% } %> 
         </div>
         <div>
             <label for="length">Duración </label>
+            <% if (typeof pelicula !== 'undefined') { %>
+            <p><input type="number" name="length" id="length" required value="<%= pelicula.data.length %>"></p>
+            <% } else { %>   
             <p><input type="number" name="length" id="length" required></p>
+            <% } %> 
         </div>
 
         <ul class="errores"></ul>
