Funciona el delete para las peliculas creadas por nosotros(ya que no cuentan con relacion con otras tablas)

--- a/src/views/formulario.ejs
+++ b/src/views/formulario.ejs
@@ -70,7 +70,7 @@
         <div class="action">
             <button class="botonAgregar" id="editButton">Editar</button>
             <button class="botonAgregar" id="createButton">Crear</button>
-            <button class="botonBorrar">Eliminar</button>
+            <button class="botonBorrar" id="deleteButton">Eliminar</button>
         </div>
     </form>
     <script src="/js/moviesAddValidation.js"></script>
